Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20925

Regression: Double click in editor selects only one word

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 4.8.0, 5.3.1
    • 4.7.3, 5.3.0
    • GUI: Look'n'Feel
    • None
    • Qt Creator 2.3.0 beta and 2.3.0 RC (prebuilt binaries)
      Mac OS X 10.6
      Windows
    • 852abfca6f4c349dce9b895956922f96d82df579 c3baa7c1dc8c29bfe60e8e5c676c606d4f699005

      After double clicking on a word in the editor, only that word is selected. Moving the mouse cursor does not select further words.

      The usual behavior would be to select more words while moving the mouse.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            Unassigned Unassigned
            vgoetz Volker Götz
            Votes:
            11 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes