Fix double click and drag not extending word selection.

mousePressed isn't set on the second press of a double click and so
can't be used to determine if all selections should be skipped.  Instead
skip only the single click and drag selections if mousePressed is false.

Change-Id: I5e7ba033f38b0f9b98fdca5c61a8548f92991601
Task-number: QTBUG-20925
Reviewed-by: Martin Jones